Adjusted the yaml file to be node name agnostic.
ToDo: create the haproxy file in a dynamic fashion based on the node names and the port mappings

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DOCKERPROJECT=metrotest
 mlVersionTag=10.0-8.1-centos-1.0.0-ea2
+mlBootstrap=mlcup_node0.local
+mlNode1=mlcup_node1.local
+mlVoter=mlcup_node2.local
