--- a/haproxy-2.4/haproxy.cfg
+++ b/haproxy-2.4/haproxy.cfg
@@ -26,71 +26,13 @@ frontend stats
   stats uri /
   stats refresh 10s
 
+## default marklogic system ports
+
 frontend qconsole
   bind :8000
   option forwardfor except 127.0.0.1
   http-request allow 
   default_backend all_nodes_qconsole
-
-frontend admin
-  bind :8001
-  option forwardfor except 127.0.0.1
-  http-request allow 
-  default_backend all_nodes_admin
-
-frontend manage
-  bind :8002
-  option forwardfor except 127.0.0.1
-  http-request allow 
-  default_backend all_nodes_manage
-
-frontend rest_8003
-  bind :8003
-  option forwardfor except 127.0.0.1
-  http-request allow 
-  default_backend all_nodes_rest_8003
-
-frontend rest_8004
-  bind :8004
-  option forwardfor except 127.0.0.1
-  http-request allow 
-  default_backend all_nodes_rest_8004
-
-frontend rest_8005
-  bind :8005
-  option forwardfor except 127.0.0.1
-  http-request allow 
-  default_backend all_nodes_rest_8005
-
-frontend rest_8006
-  bind :8006
-  option forwardfor except 127.0.0.1
-  http-request allow 
-  default_backend all_nodes_rest_8006
-
-frontend rest_8007
-  bind :8007
-  option forwardfor except 127.0.0.1
-  http-request allow 
-  default_backend all_nodes_rest_8007
-
-frontend rest_8008
-  bind :8008
-  option forwardfor except 127.0.0.1
-  http-request allow 
-  default_backend all_nodes_rest_8008
-
-frontend rest_8009
-  bind :8009
-  option forwardfor except 127.0.0.1
-  http-request allow 
-  default_backend all_nodes_rest_8009
-
-frontend rest_8010
-  bind :8010
-  option forwardfor except 127.0.0.1
-  http-request allow 
-  default_backend all_nodes_rest_8010
 
 backend all_nodes_qconsole
   balance roundrobin
@@ -100,6 +42,12 @@ backend all_nodes_qconsole
   server s1 mlcup_node0.local:8000 check port 7997 cookie dnode1
   server s2 mlcup_node1.local:8000 check port 7997 cookie dnode2
 
+frontend admin
+  bind :8001
+  option forwardfor except 127.0.0.1
+  http-request allow 
+  default_backend all_nodes_admin
+
 backend all_nodes_admin
   balance roundrobin
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
@@ -107,6 +55,12 @@ backend all_nodes_admin
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8001 check port 7997 cookie dnode1
   server s2 mlcup_node1.local:8001 check port 7997 cookie dnode2
+
+frontend manage
+  bind :8002
+  option forwardfor except 127.0.0.1
+  http-request allow 
+  default_backend all_nodes_manage
 
 backend all_nodes_manage
   balance roundrobin
@@ -116,6 +70,14 @@ backend all_nodes_manage
   server s1 mlcup_node0.local:8002 check port 7997 cookie dnode1
   server s2 mlcup_node1.local:8002 check port 7997 cookie dnode2
 
+## all marklogic application ports
+
+frontend rest_8003
+  bind :8003
+  option forwardfor except 127.0.0.1
+  http-request allow 
+  default_backend all_nodes_rest_8003
+
 backend all_nodes_rest_8003
   balance roundrobin
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
@@ -123,6 +85,12 @@ backend all_nodes_rest_8003
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8003 check port 7997 cookie dnode1
   server s2 mlcup_node1.local:8003 check port 7997 cookie dnode2
+
+frontend rest_8004
+  bind :8004
+  option forwardfor except 127.0.0.1
+  http-request allow 
+  default_backend all_nodes_rest_8004
 
 backend all_nodes_rest_8004
   balance roundrobin
@@ -132,6 +100,12 @@ backend all_nodes_rest_8004
   server s1 mlcup_node0.local:8004 check port 7997 cookie dnode1
   server s2 mlcup_node1.local:8004 check port 7997 cookie dnode2
 
+frontend rest_8005
+  bind :8005
+  option forwardfor except 127.0.0.1
+  http-request allow 
+  default_backend all_nodes_rest_8005
+
 backend all_nodes_rest_8005
   balance roundrobin
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
@@ -139,6 +113,12 @@ backend all_nodes_rest_8005
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8005 check port 7997 cookie dnode1
   server s2 mlcup_node1.local:8005 check port 7997 cookie dnode2
+
+frontend rest_8006
+  bind :8006
+  option forwardfor except 127.0.0.1
+  http-request allow 
+  default_backend all_nodes_rest_8006
 
 backend all_nodes_rest_8006
   balance roundrobin
@@ -148,6 +128,12 @@ backend all_nodes_rest_8006
   server s1 mlcup_node0.local:8006 check port 7997 cookie dnode1
   server s2 mlcup_node1.local:8006 check port 7997 cookie dnode2
 
+frontend rest_8007
+  bind :8007
+  option forwardfor except 127.0.0.1
+  http-request allow 
+  default_backend all_nodes_rest_8007
+
 backend all_nodes_rest_8007
   balance roundrobin
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
@@ -155,6 +141,12 @@ backend all_nodes_rest_8007
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8007 check port 7997 cookie dnode1
   server s2 mlcup_node1.local:8007 check port 7997 cookie dnode2
+
+frontend rest_8008
+  bind :8008
+  option forwardfor except 127.0.0.1
+  http-request allow 
+  default_backend all_nodes_rest_8008
 
 backend all_nodes_rest_8008
   balance roundrobin
@@ -164,6 +156,12 @@ backend all_nodes_rest_8008
   server s1 mlcup_node0.local:8008 check port 7997 cookie dnode1
   server s2 mlcup_node1.local:8008 check port 7997 cookie dnode2
 
+frontend rest_8009
+  bind :8009
+  option forwardfor except 127.0.0.1
+  http-request allow 
+  default_backend all_nodes_rest_8009
+
 backend all_nodes_rest_8009
   balance roundrobin
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
@@ -171,6 +169,12 @@ backend all_nodes_rest_8009
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8009 check port 7997 cookie dnode1
   server s2 mlcup_node1.local:8009 check port 7997 cookie dnode2
+
+frontend rest_8010
+  bind :8010
+  option forwardfor except 127.0.0.1
+  http-request allow
+  default_backend all_nodes_rest_8010
 
 backend all_nodes_rest_8010
   balance roundrobin
