switched back to original docker-compose version 3.6 and the original network setting

--- a/marklogic-3n-centos.yaml
+++ b/marklogic-3n-centos.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.6'
 
 services:
   bootstrap:
@@ -120,5 +120,4 @@ secrets:
     file: ./mldb_admin_username.txt
 
 networks:
-  external_net:
-    driver: bridge
+  external_net: {}
