Fixed some issues in haproxy config, reshuffled some properties in yaml file and .env file
Adjusted readme

--- a/.env
+++ b/.env
@@ -1,5 +1,17 @@
 DOCKERPROJECT=metrotest
 mlVersionTag=10.0-8.1-centos-1.0.0-ea2
+
 mlBootstrap=mlcup_node0.local
+mlBootstrapApplicationPortMapping=7140-7150:8040-8050
+
 mlNode1=mlcup_node1.local
+mlNode1ApplicationPortMapping=7240-7250:8040-8050
+
 mlVoter=mlcup_node2.local
+
+lbApplicationPortMapping=8040-8050:8040-8050
+
+activeMQHost=metrotest.queue
+activeMQAdminPortMapping=8161:8161
+activeMQPortMapping=61616:61616
+
