--- a/haproxy-2.4/haproxy.cfg
+++ b/haproxy-2.4/haproxy.cfg
@@ -19,6 +19,7 @@ defaults
   option  http-server-close   # Enable HTTP connection closing on the server side
   option  abortonclose        # Enable early dropping of aborted requests pending in queues
   option  forwardfor except 127.0.0.0/8    # Enable insertion of the X-Forwarded-For header to requests sent to servers
+  balance roundrobin
 
 frontend stats
   bind *:8404
@@ -35,12 +36,11 @@ frontend qconsole
   default_backend all_nodes_qconsole
 
 backend all_nodes_qconsole
-  balance roundrobin
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
   http-check expect string Healthy
-  cookie SessionID prefix nocache
-  server s1 mlcup_node0.local:8000 check port 7997 cookie dnode1
-  server s2 mlcup_node1.local:8000 check port 7997 cookie dnode2
+  cookie HostId prefix nocache
+  server s1 mlcup_node0.local:8000 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8000 check port 7997 cookie s2
 
 frontend admin
   bind :8001
@@ -49,12 +49,11 @@ frontend admin
   default_backend all_nodes_admin
 
 backend all_nodes_admin
-  balance roundrobin
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
   http-check expect string Healthy
-  cookie SessionID prefix nocache
-  server s1 mlcup_node0.local:8001 check port 7997 cookie dnode1
-  server s2 mlcup_node1.local:8001 check port 7997 cookie dnode2
+  cookie HostId prefix nocache
+  server s1 mlcup_node0.local:8001 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8001 check port 7997 cookie s2
 
 frontend manage
   bind :8002
@@ -63,123 +62,153 @@ frontend manage
   default_backend all_nodes_manage
 
 backend all_nodes_manage
-  balance roundrobin
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
   http-check expect string Healthy
-  cookie SessionID prefix nocache
-  server s1 mlcup_node0.local:8002 check port 7997 cookie dnode1
-  server s2 mlcup_node1.local:8002 check port 7997 cookie dnode2
+  cookie HostId prefix nocache
+  server s1 mlcup_node0.local:8002 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8002 check port 7997 cookie s2
 
 ## all marklogic application ports
 
-frontend rest_8003
-  bind :8003
+frontend rest_8040
+  bind :8040
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8003
+  default_backend all_nodes_rest_8040
 
-backend all_nodes_rest_8003
-  balance roundrobin
+backend all_nodes_rest_8040
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
   http-check expect string Healthy
-  cookie SessionID prefix nocache
-  server s1 mlcup_node0.local:8003 check port 7997 cookie dnode1
-  server s2 mlcup_node1.local:8003 check port 7997 cookie dnode2
+  cookie HostId prefix nocache
+  server s1 mlcup_node0.local:8040 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8040 check port 7997 cookie s2
 
-frontend rest_8004
-  bind :8004
+frontend rest_8041
+  bind :8041
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8004
+  default_backend all_nodes_rest_8041
 
-backend all_nodes_rest_8004
-  balance roundrobin
+backend all_nodes_rest_8041
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
   http-check expect string Healthy
-  cookie SessionID prefix nocache
-  server s1 mlcup_node0.local:8004 check port 7997 cookie dnode1
-  server s2 mlcup_node1.local:8004 check port 7997 cookie dnode2
+  cookie SERVER_USED insert indirect nocache
+  server s1 mlcup_node0.local:8041 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8041 check port 7997 cookie s2
 
-frontend rest_8005
-  bind :8005
+frontend rest_8042
+  bind :8042
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8005
+  default_backend all_nodes_rest_8042
 
-backend all_nodes_rest_8005
-  balance roundrobin
+backend all_nodes_rest_8042
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
   http-check expect string Healthy
-  cookie SessionID prefix nocache
-  server s1 mlcup_node0.local:8005 check port 7997 cookie dnode1
-  server s2 mlcup_node1.local:8005 check port 7997 cookie dnode2
+  cookie HostId prefix nocache
+  server s1 mlcup_node0.local:8042 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8042 check port 7997 cookie s2
 
-frontend rest_8006
-  bind :8006
+frontend rest_8043
+  bind :8043
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8006
+  default_backend all_nodes_rest_8043
 
-backend all_nodes_rest_8006
-  balance roundrobin
+backend all_nodes_rest_8043
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
   http-check expect string Healthy
-  cookie SessionID prefix nocache
-  server s1 mlcup_node0.local:8006 check port 7997 cookie dnode1
-  server s2 mlcup_node1.local:8006 check port 7997 cookie dnode2
+  cookie HostId prefix nocache
+  server s1 mlcup_node0.local:8043 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8043 check port 7997 cookie s2
 
-frontend rest_8007
-  bind :8007
+frontend rest_8044
+  bind :8044
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8007
+  default_backend all_nodes_rest_8044
 
-backend all_nodes_rest_8007
-  balance roundrobin
+backend all_nodes_rest_8044
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
   http-check expect string Healthy
-  cookie SessionID prefix nocache
-  server s1 mlcup_node0.local:8007 check port 7997 cookie dnode1
-  server s2 mlcup_node1.local:8007 check port 7997 cookie dnode2
+  cookie HostId prefix nocache
+  server s1 mlcup_node0.local:8044 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8044 check port 7997 cookie s2
 
-frontend rest_8008
-  bind :8008
+frontend rest_8045
+  bind :8045
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8008
+  default_backend all_nodes_rest_8045
 
-backend all_nodes_rest_8008
-  balance roundrobin
+backend all_nodes_rest_8045
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
   http-check expect string Healthy
-  cookie SessionID prefix nocache
-  server s1 mlcup_node0.local:8008 check port 7997 cookie dnode1
-  server s2 mlcup_node1.local:8008 check port 7997 cookie dnode2
+  cookie HostId prefix nocache
+  server s1 mlcup_node0.local:8045 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8045 check port 7997 cookie s2
 
-frontend rest_8009
-  bind :8009
+frontend rest_8046
+  bind :8046
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8009
+  default_backend all_nodes_rest_8046
 
-backend all_nodes_rest_8009
-  balance roundrobin
+backend all_nodes_rest_8046
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
   http-check expect string Healthy
-  cookie SessionID prefix nocache
-  server s1 mlcup_node0.local:8009 check port 7997 cookie dnode1
-  server s2 mlcup_node1.local:8009 check port 7997 cookie dnode2
+  cookie HostId prefix nocache
+  server s1 mlcup_node0.local:8046 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8046 check port 7997 cookie s2
 
-frontend rest_8010
-  bind :8010
+frontend rest_8047
+  bind :8047
   option forwardfor except 127.0.0.1
   http-request allow
-  default_backend all_nodes_rest_8010
+  default_backend all_nodes_rest_8047
 
-backend all_nodes_rest_8010
-  balance roundrobin
+backend all_nodes_rest_8047
   option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
   http-check expect string Healthy
-  cookie SessionID prefix nocache
-  server s1 mlcup_node0.local:8010 check port 7997 cookie dnode1
-  server s2 mlcup_node1.local:8010 check port 7997 cookie dnode2
+  cookie HostId prefix nocache
+  server s1 mlcup_node0.local:8047 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8047 check port 7997 cookie s2
+
+frontend rest_8048
+  bind :8048
+  option forwardfor except 127.0.0.1
+  http-request allow
+  default_backend all_nodes_rest_8048
+
+backend all_nodes_rest_8048
+  option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
+  http-check expect string Healthy
+  cookie HostId prefix nocache
+  server s1 mlcup_node0.local:8048 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8048 check port 7997 cookie s2
+
+frontend rest_8049
+  bind :8049
+  option forwardfor except 127.0.0.1
+  http-request allow
+  default_backend all_nodes_rest_8049
+
+backend all_nodes_rest_8049
+  option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
+  http-check expect string Healthy
+  cookie HostId prefix nocache
+  server s1 mlcup_node0.local:8049 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8049 check port 7997 cookie s2
+
+frontend rest_8050
+  bind :8050
+  option forwardfor except 127.0.0.1
+  http-request allow
+  default_backend all_nodes_rest_8050
+
+backend all_nodes_rest_8050
+  option httpchk GET / HTTP/1.1\r\nHost:\ monitoring\r\nConnection:\ close
+  http-check expect string Healthy
+  cookie HostId prefix nocache
+  server s1 mlcup_node0.local:8050 check port 7997 cookie s1
+  server s2 mlcup_node1.local:8050 check port 7997 cookie s2
