--- a/marklogic-3n-centos.yaml
+++ b/marklogic-3n-centos.yaml
@@ -12,13 +12,14 @@ services:
       - MARKLOGIC_ADMIN_PASSWORD_FILE=mldb_admin_password
       - TZ=Europe/Prague
     volumes:
-      - ./data/MarkLogic1:/var/opt/MarkLogic
+      - ./data/MarkLogic1:/export/data/forests:delegated
     secrets:
       - mldb_admin_password
       - mldb_admin_username
     ports:
-      - 7100-7110:8000-8010
       - 7197:7997
+      - 7100-7102:8000-8002
+      - "${mlBootstrapApplicationPortMapping}"
     networks:
     - external_net
     deploy:
@@ -41,13 +42,14 @@ services:
       - MARKLOGIC_JOIN_CLUSTER=true
       - TZ=Europe/Prague
     volumes:
-      - ./data/MarkLogic2:/var/opt/MarkLogic
+      - ./data/MarkLogic2:/export/data/forests:delegated
     secrets:
       - mldb_admin_password
       - mldb_admin_username
     ports:
-      - 7200-7210:8000-8010
       - 7297:7997
+      - 7200-7202:8000-8002
+      - "${mlNode1ApplicationPortMapping}"
     depends_on:
     - bootstrap
     networks:
@@ -71,14 +73,12 @@ services:
       - MARKLOGIC_ADMIN_PASSWORD_FILE=mldb_admin_password
       - MARKLOGIC_JOIN_CLUSTER=true
       - TZ=Europe/Prague
-    volumes:
-      - ./data/MarkLogic3:/var/opt/MarkLogic
     secrets:
       - mldb_admin_password
       - mldb_admin_username
     ports:
-      - 7300-7310:8000-8010
       - 7397:7997
+      - 7300-7302:8000-8002
     depends_on:
     - bootstrap
     networks:
@@ -99,8 +99,9 @@ services:
     volumes:
       - ./haproxy-2.4:/usr/local/etc/haproxy/
     ports:
-      - "8000-8010:8000-8010"
-      - "8404:8404"
+      - 8000-8002:8000-8002
+      - "${lbApplicationPortMapping}"
+      - 8404:8404
     expose:
       - "8000-8010"
     networks:
@@ -112,7 +113,21 @@ services:
         limits:
           cpus: '1'
           memory: 256M
-
+  activemq:
+    image: rmohr/activemq:5.15.9-alpine
+    hostname: "${activeMQHost}"
+    container_name: "${activeMQHost}"
+    ports:
+      - "${activeMQAdminPortMapping}"
+      - "${activeMQPortMapping}"
+    networks:
+      - external_net
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
+  
 secrets:
   mldb_admin_password:
     file: ./mldb_admin_password.txt
