Adjusted to latest version of ML
added mapping for log files
moved hardcoded port mappings to .env file
changed haproxy 2.4 settings
added haproxy 2.5 config
added ssl to scripts

--- a/.env
+++ b/.env
@@ -1,16 +1,34 @@
 DOCKERPROJECT=metrotest
-mlVersionTag=10.0-8.1-centos-1.0.0-ea2
+mlVersionTag=10.0-9.4-centos-1.0.0-ea4
+#10.0-8.1-centos-1.0.0-ea2
 
+# Bootstrap node
 mlBootstrap=mlcup_node0.local
+mlBootstrapHealthPortMapping=7197:7997
+mlBootstrapSystemPortMapping=7100-7102:8000-8002
 mlBootstrapApplicationPortMapping=7140-7150:8040-8050
 
+# Data node 1
 mlNode1=mlcup_node1.local
+mlNode1HealthPortMapping=7297:7997
+mlNode1SystemPortMapping=7200-7202:8000-8002
 mlNode1ApplicationPortMapping=7240-7250:8040-8050
 
+# Voter node
 mlVoter=mlcup_node2.local
+mlVoterHealthPortMapping=7397:7997
+mlVoterSystemPortMapping=7300-7302:8000-8002
 
+# LoadBalancer
+lbVersion=2.5
+lbAdminPortMapping=8404:8404
+lbSystemPortMapping=8000-8002:8000-8002
 lbApplicationPortMapping=8040-8050:8040-8050
 
+lbExposeSystemPorts=8000-8002
+lbExposeApplicationPorts=8040-8050
+
+# Message Queue
 activeMQHost=metrotest.queue
 activeMQAdminPortMapping=8161:8161
 activeMQPortMapping=61616:61616
