--- a/haproxy-2.5/haproxy.cfg
+++ b/haproxy-2.5/haproxy.cfg
@@ -1,18 +1,22 @@
 global
-  stats socket /var/run/api.sock user haproxy group haproxy mode 660 level admin expose-fd listeners
+  stats socket /var/run/api.sock mode 660 level admin expose-fd listeners
+  user haproxy 
+  group haproxy   
   log stdout format raw local0 info
+  tune.ssl.default-dh-param 2048
 
 defaults
   log     global
-  mode    http
+  mode    http                  # loadbalancer also handles
   timeout check           10s   # 10 seconds max time to wait for a connection attempt to a VPS to succeed
   timeout queue           30s   # 30 seconds max queued on load balancer
-  timeout client          10m    # 60 seconds max inactivity time on the client side
+  timeout client          10m   # 10 minutes max inactivity time on the client side
   timeout connect         5s    # 5 seconds max to connect or to stay in queue
-  timeout server          10m    # 60 seconds max inactivity time on the server side
+  timeout server          10m   # 10 minutes max inactivity time on the server side
   timeout http-keep-alive 5s    # 5 seconds max for the client to post next request
-  timeout http-request    10s   # 15 seconds max for the client to send a request
+  timeout http-request    10s   # 10 seconds max for the client to send a request
   retries                 3     # Try to connect up to 3 times in case of failure
+  
   option  httplog             # Enable logging of HTTP request, session state and timers (require loglevel INFO)
   option  dontlognull         # Disable logging of null connections (don't log probe)
   option  redispatch          # Enable session redistribution in case of connection failure
@@ -28,42 +32,36 @@ frontend stats
 
 ## default marklogic system ports
 
-frontend qconsole
+listen qconsole
   bind :8000
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_qconsole
-
-backend all_nodes_qconsole
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
-  cookie SessionID prefix nocache
+  cookie SessionID  prefix nocache
   server s1 mlcup_node0.local:8000 check port 7997 cookie s1
   server s2 mlcup_node1.local:8000 check port 7997 cookie s2
 
-frontend admin
+listen admin
   bind :8001
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_admin
-
-backend all_nodes_admin
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8001 check port 7997 cookie s1
   server s2 mlcup_node1.local:8001 check port 7997 cookie s2
 
-frontend manage
+listen manage
   bind :8002
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_manage
-
-backend all_nodes_manage
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
   cookie SessionID prefix nocache
@@ -72,154 +70,132 @@ backend all_nodes_manage
 
 ## all marklogic application ports
 
-frontend rest_8040
+listen rest_8040
   bind :8040
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8040
-
-backend all_nodes_rest_8040
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
-  cookie SessionID prefix nocache
+  cookie HostId prefix nocache
   server s1 mlcup_node0.local:8040 check port 7997 cookie s1
   server s2 mlcup_node1.local:8040 check port 7997 cookie s2
 
-frontend rest_8041
+listen rest_8041
   bind :8041
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8041
-
-backend all_nodes_rest_8041
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8041 check port 7997 cookie s1
   server s2 mlcup_node1.local:8041 check port 7997 cookie s2
 
-frontend rest_8042
+listen rest_8042
   bind :8042
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8042
-
-backend all_nodes_rest_8042
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8042 check port 7997 cookie s1
   server s2 mlcup_node1.local:8042 check port 7997 cookie s2
 
-frontend rest_8043
+listen rest_8043
   bind :8043
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8043
-
-backend all_nodes_rest_8043
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8043 check port 7997 cookie s1
   server s2 mlcup_node1.local:8043 check port 7997 cookie s2
 
-frontend rest_8044
+listen rest_8044
   bind :8044
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8044
-
-backend all_nodes_rest_8044
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8044 check port 7997 cookie s1
   server s2 mlcup_node1.local:8044 check port 7997 cookie s2
 
-frontend rest_8045
+listen rest_8045
   bind :8045
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8045
-
-backend all_nodes_rest_8045
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8045 check port 7997 cookie s1
   server s2 mlcup_node1.local:8045 check port 7997 cookie s2
 
-frontend rest_8046
+listen rest_8046
   bind :8046
   option forwardfor except 127.0.0.1
   http-request allow 
-  default_backend all_nodes_rest_8046
-
-backend all_nodes_rest_8046
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8046 check port 7997 cookie s1
   server s2 mlcup_node1.local:8046 check port 7997 cookie s2
 
-frontend rest_8047
+listen rest_8047
   bind :8047
   option forwardfor except 127.0.0.1
   http-request allow
-  default_backend all_nodes_rest_8047
-
-backend all_nodes_rest_8047
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8047 check port 7997 cookie s1
   server s2 mlcup_node1.local:8047 check port 7997 cookie s2
 
-frontend rest_8048
+listen rest_8048
   bind :8048
   option forwardfor except 127.0.0.1
   http-request allow
-  default_backend all_nodes_rest_8048
-
-backend all_nodes_rest_8048
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
-  cookie SessionID prefix nocache
+  cookie SessionID insert indirect nocache maxidle 60
   server s1 mlcup_node0.local:8048 check port 7997 cookie s1
   server s2 mlcup_node1.local:8048 check port 7997 cookie s2
 
-frontend rest_8049
+listen rest_8049
   bind :8049
   option forwardfor except 127.0.0.1
   http-request allow
-  default_backend all_nodes_rest_8049
-
-backend all_nodes_rest_8049
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
   cookie SessionID prefix nocache
   server s1 mlcup_node0.local:8049 check port 7997 cookie s1
   server s2 mlcup_node1.local:8049 check port 7997 cookie s2
 
-frontend rest_8050
+listen rest_8050
   bind :8050
   option forwardfor except 127.0.0.1
   http-request allow
-  default_backend all_nodes_rest_8050
-
-backend all_nodes_rest_8050
   balance roundrobin
+  option httpchk
   http-check send meth GET uri / ver HTTP/1.1
   http-check expect string Healthy
   cookie SessionID prefix nocache
