--- a/.env
+++ b/.env
@@ -1,18 +1,17 @@
 DOCKERPROJECT=metrotest
-mlVersionTag=10.0-9.4-centos-1.0.0-ea4
-#10.0-8.1-centos-1.0.0-ea2
+mlVersionTag=10.0-9.5-centos-1.0.1
 
 # Bootstrap node
 mlBootstrap=mlcup_node0.local
 mlBootstrapHealthPortMapping=7197:7997
 mlBootstrapSystemPortMapping=7100-7102:8000-8002
-mlBootstrapApplicationPortMapping=7140-7150:8040-8050
+mlBootstrapApplicationPortMapping=7140-7150:8010-8020
 
 # Data node 1
 mlNode1=mlcup_node1.local
 mlNode1HealthPortMapping=7297:7997
 mlNode1SystemPortMapping=7200-7202:8000-8002
-mlNode1ApplicationPortMapping=7240-7250:8040-8050
+mlNode1ApplicationPortMapping=7240-7250:8010-8020
 
 # Voter node
 mlVoter=mlcup_node2.local
@@ -23,13 +22,12 @@ mlVoterSystemPortMapping=7300-7302:8000-8002
 lbVersion=2.5
 lbAdminPortMapping=8404:8404
 lbSystemPortMapping=8000-8002:8000-8002
-lbApplicationPortMapping=8040-8050:8040-8050
+lbApplicationPortMapping=8010-8020:8010-8020
 
 lbExposeSystemPorts=8000-8002
-lbExposeApplicationPorts=8040-8050
+lbExposeApplicationPorts=8010-8020
 
 # Message Queue
 activeMQHost=metrotest.queue
 activeMQAdminPortMapping=8161:8161
 activeMQPortMapping=61616:61616
-
