--- a/marklogic-3n-centos.yaml
+++ b/marklogic-3n-centos.yaml
@@ -12,8 +12,9 @@ services:
       - MARKLOGIC_ADMIN_PASSWORD_FILE=mldb_admin_password
       - TZ=Europe/Prague
     volumes:
+      - ml_node1_data:/var/opt/MarkLogic:rw
       - ./data/MarkLogic1/Logs:/var/opt/MarkLogic/Logs:delegated
-      - ./data/MarkLogic1/forests:/export/data/forests:delegated
+      - ./data/Marklogic1/export:/export/data/MarkLogic:rw
     secrets:
       - mldb_admin_password
       - mldb_admin_username
@@ -22,7 +23,7 @@ services:
       - "${mlBootstrapSystemPortMapping}"
       - "${mlBootstrapApplicationPortMapping}"
     networks:
-    - external_net
+      - external_net
     deploy:
       resources:
         limits:
@@ -43,8 +44,9 @@ services:
       - MARKLOGIC_JOIN_CLUSTER=true
       - TZ=Europe/Prague
     volumes:
+      - ml_node2_data:/var/opt/MarkLogic:rw
       - ./data/MarkLogic2/Logs:/var/opt/MarkLogic/Logs:delegated
-      - ./data/MarkLogic2/forests:/export/data/forests:delegated
+      - ./data/MarkLogic2/export:/export/data/MarkLogic:rw
     secrets:
       - mldb_admin_password
       - mldb_admin_username
@@ -53,9 +55,9 @@ services:
       - "${mlNode1SystemPortMapping}"
       - "${mlNode1ApplicationPortMapping}"
     depends_on:
-    - bootstrap
+      - bootstrap
     networks:
-    - external_net
+      - external_net
     deploy:
       resources:
         limits:
@@ -76,6 +78,7 @@ services:
       - MARKLOGIC_JOIN_CLUSTER=true
       - TZ=Europe/Prague
     volumes:
+      - ml_node3_data:/var/opt/MarkLogic:rw
       - ./data/MarkLogic3/Logs:/var/opt/MarkLogic/Logs:delegated
     secrets:
       - mldb_admin_password
@@ -136,6 +139,11 @@ services:
           cpus: '0.5'
           memory: 1G
   
+volumes:
+  ml_node1_data:
+  ml_node2_data:
+  ml_node3_data:
+
 secrets:
   mldb_admin_password:
     file: ./mldb_admin_password.txt
